<resources>
    <string name="app_name">Shop App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_phones">Phones</string>
    <string name="category_computer">Computer</string>
    <string name="category_health">Health</string>
    <string name="category_books">Books</string>
    <string name="category_button_5">button_5</string>
    <string name="my_cart_total">$%s us</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="checkout">Checkout</string>
</resources>