<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_button_previous"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewAddAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_address"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonLocation"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonLocation"
        app:layout_constraintTop_toTopOf="@+id/imageButtonLocation" />

    <ImageButton
        android:id="@+id/imageButtonLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_button_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMyCartTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/my_cart"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBack" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/top_rounded_corners"
        android:backgroundTint="@color/filter_background"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMyCartTitle"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/imageButtonBusketItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/filter_background"
            android:src="@drawable/ic_button_basket"
            app:layout_constraintBottom_toBottomOf="@+id/textViewItem2Price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewItem2Name" />

        <ImageButton
            android:id="@+id/imageButtonAddProductItem2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/filter_background"
            android:src="@drawable/ic_button_add"
            app:layout_constraintBottom_toBottomOf="@+id/textViewItem2Price"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonBusketItem2"
            app:layout_constraintTop_toTopOf="@+id/textViewItem2Name"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/imageViewItem1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewItem1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imageViewItem1"
            app:layout_constraintTop_toTopOf="@+id/imageViewItem1" />

        <TextView
            android:id="@+id/textViewItem1Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewItem1"
            app:layout_constraintStart_toEndOf="@+id/imageViewItem1" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginBottom="76dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/main_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/divider2"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginBottom="76dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/main_background"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/imageButtonBusketItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/filter_background"
            android:src="@drawable/ic_button_basket"
            app:layout_constraintBottom_toBottomOf="@+id/textViewItem1Price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewItem1Name" />

        <ImageButton
            android:id="@+id/imageButtonAddProductItem1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/filter_background"
            android:src="@drawable/ic_button_add"
            app:layout_constraintBottom_toBottomOf="@+id/textViewItem1Price"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonBusketItem1"
            app:layout_constraintTop_toTopOf="@+id/textViewItem1Name" />

        <ImageView
            android:id="@+id/imageViewItem2"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewItem1"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewItem2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/imageViewItem2"
            app:layout_constraintTop_toTopOf="@+id/imageViewItem2" />

        <TextView
            android:id="@+id/textViewItem2Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewItem2"
            app:layout_constraintStart_toEndOf="@+id/imageViewItem2" />

        <TextView
            android:id="@+id/textViewTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/textViewDeliveryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delivery"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textViewTotalLabel"
            app:layout_constraintTop_toBottomOf="@+id/textViewTotalLabel" />

        <TextView
            android:id="@+id/textViewDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textViewTotal"
            app:layout_constraintTop_toBottomOf="@+id/textViewTotal" />

        <Button
            android:id="@+id/buttonCheckout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_see_more"
            android:text="@string/checkout"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/textViewTotal"
            app:layout_constraintStart_toStartOf="@+id/textViewTotalLabel"
            app:layout_constraintTop_toBottomOf="@+id/divider" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>